Avances de Hoy 6/marzo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca</title>
+    <title>Biblioteca JS</title>
+    <link rel="stylesheet" href="/frontend/css/registroUsuario.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
-<body>
-    
+<body class="marco">
+<div class="container">
+    <!-- Aquí va el logo o imagen del libro -->
+    <div class="icon">
+        <img src="/frontend/img/leer.png" alt="Libro">
+    </div>
+    <h1>Biblioteca JS</h1>
+    <div class="name-group">
+        <div>
+            <label>Nombre</label>
+            <input type="text" placeholder="Nombre">
+        </div>
+        <div>
+            <label>Apellido</label>
+            <input type="text" placeholder="Apellido">
+        </div>
+    </div>
+    <label>ID</label>
+    <input type="text" placeholder="ID">
+
+    <label>Correo electrónico</label>
+    <input type="email" placeholder="Correo electrónico">
+
+    <label>Número de teléfono</label>
+    <input type="tel" placeholder="Número de teléfono">
+
+    <button>Préstamo</button>
+</div>
 </body>
 </html>
